OMNI-5006, OMNI-5022 Rsolved spacing issue for newport controls

--- a/ui/components/form-element/animate/_index.scss
+++ b/ui/components/form-element/animate/_index.scss
@@ -13,7 +13,6 @@
 .nds-form-element__control-animated-label {
   font-size: 0.875rem;
   position: relative;
-  margin-top: 0.75rem;
 }
 
 .nds-form-element__label {
