--- a/ui/utilities/common-newport/_index.scss
+++ b/ui/utilities/common-newport/_index.scss
@@ -7,6 +7,10 @@ ng-form {
   }
 }
 
+ng-form.nds-m-bottom_large {
+  margin-bottom: 0.5rem;
+}
+
 section.nds-page-header {
   border: none;
   box-shadow: none;
@@ -209,7 +213,7 @@ ul.nds-dropdown-list {
 }
 
 .nds-form--multi-input__container .nds-control-action__container {
-  top: 0.85rem;
+  top: 0.35rem;
 }
 
 .nds-popover.nds-popover_tooltip .nds-popover__body {
